{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 15,
  "lineage": "d66291b1-e644-5545-ab9a-684e9d736721",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0453a43f384c588e1",
            "arn": "arn:aws:ec2:ap-southeast-2:725166342078:instance/i-00f46a563c090c25c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f46a563c090c25c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-009a64ccbdaf6790c"
              }
            ],
            "primary_network_interface_id": "eni-009a64ccbdaf6790c",
            "private_dns": "ip-172-31-7-190.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.7.190",
            "public_dns": "ec2-3-107-72-201.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.107.72.201",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bee768a61558fc6f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "demo-SG-01"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff342712dbdd8867",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6b9dbb7de8961f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "725166342078",
            "id": "i-00f46a563c090c25c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_security_group.demo-SG-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:725166342078:internet-gateway/igw-0b2ec6c8a849dd9db",
            "id": "igw-0b2ec6c8a849dd9db",
            "owner_id": "725166342078",
            "region": "ap-southeast-2",
            "vpc_id": "vpc-07f5e664cae62fb15"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "725166342078",
            "id": "igw-0b2ec6c8a849dd9db",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:725166342078:route-table/rtb-045f66af23cefb29a",
            "id": "rtb-045f66af23cefb29a",
            "owner_id": "725166342078",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2ec6c8a849dd9db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f5e664cae62fb15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "725166342078",
            "id": "rtb-045f66af23cefb29a",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000ed65a1148d5937",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-045f66af23cefb29a",
            "subnet_id": "subnet-06685765a561a7ed4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "725166342078",
            "id": "rtbassoc-000ed65a1148d5937",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.demo_igw",
            "aws_subnet.public",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-SG-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:725166342078:security-group/sg-0e6b9dbb7de8961f0",
            "description": "Demo security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6b9dbb7de8961f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-SG-01",
            "name_prefix": "",
            "owner_id": "725166342078",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04e04fff68518f35f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "725166342078",
            "id": "sg-0e6b9dbb7de8961f0",
            "region": "ap-southeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:725166342078:subnet/subnet-06685765a561a7ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06685765a561a7ed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725166342078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "vpc_id": "vpc-07f5e664cae62fb15"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "725166342078",
            "id": "subnet-06685765a561a7ed4",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:725166342078:vpc/vpc-07f5e664cae62fb15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b90907a61dd027e",
            "default_route_table_id": "rtb-01ede832c7da064dc",
            "default_security_group_id": "sg-09bcce83bb1f06357",
            "dhcp_options_id": "dopt-0e14e94a36d85c19a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f5e664cae62fb15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ede832c7da064dc",
            "owner_id": "725166342078",
            "region": "ap-southeast-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "725166342078",
            "id": "vpc-07f5e664cae62fb15",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}